Updated dashboard graphs

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -26,19 +26,18 @@
         <img src="~/Content/Img/compare.JPG" class="mx-auto d-block img-fluid img-thumbnail" />
     </div>
     <div id="menu1" class="container tab-pane fade">
+        <div class="row"><p> </p></div>
         <div class="row">
-            <p>Compare</p>
+            <p style="margin-left:25px;">Compare</p>
             <div class="dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:10px;">Clinic A</button>
             </div>
-        </div>
-        <div class="row"> <p>       </p> </div>
-            <div class="row">
-                <p> With   </p>
-                <div class="dropdown">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
-                </div>
+            <p style="margin-left:50px;"> With   </p>
+            <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
             </div>
+        </div>
+       
     </div>
             <div id="menu2" class="container tab-pane fade">
                 <br>
