--- a/LifeSaverSite/Views/Home/DashBoard.cshtml
+++ b/LifeSaverSite/Views/Home/DashBoard.cshtml
@@ -1,88 +1,94 @@
 ﻿@{
     ViewBag.Title = "Dashboard";
 }
-    <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
-<div class="row">
+<span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
+
+<img src="~/Content/Img/dashboardpic.JPG" class="mx-auto d-block img-fluid img-thumbnail" />
+
+@*<div class="row">
     <div class="col-md-2"></div>
     <div class="col-sm-8">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="~/Content/Img/barchart.PNG" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/Content/Img/c-piechart.PNG" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/Content/Img/Report A.PNG" alt="Third slide">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-        <div class="container">
-            <div> <p> </p></div>
-
-            <div class="row">
-
-
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <img class="d-block w-100 h-auto" src="~/Content/Img/numoffail.JPG">
-                        </div>
-                        <div class="col">
-                            <img class="d-block w-100 h-auto" src="~/Content/Img/numcaseclinic.JPG">
-                        </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="~/Content/Img/barchart.PNG" alt="First slide">
                     </div>
-
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="~/Content/Img/c-piechart.PNG" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="~/Content/Img/Report A.PNG" alt="Third slide">
+                    </div>
                 </div>
-    </div>
-    <div class="col-md-2"></div>
-</div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>*@
 
-<span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
 
 
-@*<div class="card-deck">
-    <div class="card">
-        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Report</h5>
-            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
-            <a href="#" class="btn btn-primary">Click here</a>
-        </div>
-    </div>
-    <div class="card">
-        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Inventory</h5>
-            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
-            <a href="#" class="btn btn-primary">Click here</a>
-        </div>
-    </div>
-    <div class="card">
-        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Compare</h5>
-            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
-            <a href="#" class="btn btn-primary">Click here</a>
-        </div>
-    </div>
-    <div class="card">
-        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Image</h5>
-            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
-            <a href="#" class="btn btn-primary">Click here</a>
-        </div>
-    </div>
-</div>*@
+        @*       <div class="container">
+                        <div> <p> </p></div>
+
+                        <div class="row">
+
+
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <img class="d-block w-100 h-auto" src="~/Content/Img/numoffail.JPG">
+                                    </div>
+                                    <div class="col">
+                                        <img class="d-block w-100 h-auto" src="~/Content/Img/numcaseclinic.JPG">
+                                    </div>
+                                </div>
+
+                            </div>
+                </div>
+                <div class="col-md-2"></div>
+            </div> *@
+
+        <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
+
+
+        @*<div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Report</h5>
+                        <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+                        <a href="#" class="btn btn-primary">Click here</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Inventory</h5>
+                        <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+                        <a href="#" class="btn btn-primary">Click here</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Compare</h5>
+                        <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+                        <a href="#" class="btn btn-primary">Click here</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Image</h5>
+                        <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+                        <a href="#" class="btn btn-primary">Click here</a>
+                    </div>
+                </div>
+            </div>*@
 
 
