--- a/LifeSaverSite/Views/Home/Login.cshtml
+++ b/LifeSaverSite/Views/Home/Login.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "LoginPage";
 }
 
@@ -28,11 +27,12 @@
                             <label for="pwd">Password:</label>
                             <input type="password" class="form-control" id="pwd">
                         </div>
-                       
-                            <button type="submit" class="btn btn-primary">Reset Password</button>
-                       
+                        <div class="form-group form-check ">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox"> Remember me
+                            </label>
+                        </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
-
                         <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
                     </div>
                 </div>
@@ -44,4 +44,3 @@
 
 
 </body>
-
