--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -36,6 +36,7 @@
             <div class="dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
             </div>
+            <div class="but"></div>
         </div>
        
     </div>
