--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -14,7 +14,7 @@
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      
+
         <div class="carousel-item active">
             <img class="d-block w-100 CarouselImage" src="~/Content/Img/bluebox.JPG" alt="First slide">
         </div>
@@ -34,6 +34,13 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+<p class="text-warning">Phone ID: 001 </p>
+<p class="text-warning">Time: 12:53pm</p>
+<p class="text-warning">Date: 05/14/2019</p>
+<p class="text-warning">Location: Clinic A, Lagos</p>
+<p class="text-warning">Phone Brand: Huawei P30 pro</p>
+<p class="text-warning">Phone OS: Android KitKat</p>
 
 
 
