Removed the text in the Report

--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<div class="container">
+@*<div class="container">
     <div class="jumbotron">
         <h1>Reports</h1>
         <p>Select the month for your report:</p>
@@ -20,6 +20,8 @@
         <li class="list-group-item">May 19</li>
     </ul>
 </div>
-<img src="~/Content/Img/reportpge.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
+<img src="~/Content/Img/capture.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
+<iframe width="800" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiMWZlOWRkNWUtMTg1Mi00MzFjLTgzYjctZjI2ZjYyNjM1ZmVmIiwidCI6ImJjMTBlMDUyLWIwMWMtNDg0OS05OTY3LWVlN2VjNzRmYzlkOCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
+<button type="export to PDF" class="btn btn-primary">Export To PDF</button>*@
 
-<button type="export to PDF" class="btn btn-primary">Export To PDF</button>
+
