--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -36,7 +36,7 @@
             <div class="dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
             </div>
-            <div class="but"></div>
+            <div class=" btn"><button type="submit" style="margin-left:400px;">Compare</button></div>
         </div>
        
     </div>
