Added checkboxes under compare Inventory tab on compare webpage

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -36,7 +36,27 @@
             <div class="dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
             </div>
-            <div class=" btn"><button type="submit" style="margin-left:400px;">Compare</button></div>
+            <div class=" btn">
+                <button type="submit" style="margin-left:400px;">Compare</button>
+            </div>
+            </div>
+        <div class="row">
+            <div class="form-check-inline">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Option 1
+                </label>
+            </div>
+            <div class="form-check-inline">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Option 1
+                </label>
+            </div>
+            <div class="form-check-inline">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Option 1
+                </label>
+            </div>
+
         </div>
        
     </div>
