Added labels to the checboxes under Compare Inventory tab

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -43,17 +43,17 @@
         <div class="row">
             <div class="form-check-inline">
                 <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Option 1
+                    <input type="checkbox" class="form-check-input" value="">Remaining Test Strips this month 
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Option 1
+                    <input type="checkbox" class="form-check-input" value="">Remaining Test Strip from Last Month
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Option 1
+                    <input type="checkbox" class="form-check-input" value="">Test Strips Used today
                 </label>
             </div>
 
