Fixed the checkbox alignment under Compare Inventory tab

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -39,11 +39,11 @@
             <div class=" btn">
                 <button type="submit" style="margin-left:400px;">Compare</button>
             </div>
-            </div>
+        </div>
         <div class="row">
             <div class="form-check-inline">
                 <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Remaining Test Strips this month 
+                    <input type="checkbox" class="form-check-input" value="" style="margin-left:20px;">Remaining Test Strips this month
                 </label>
             </div>
             <div class="form-check-inline">
@@ -56,12 +56,12 @@
                     <input type="checkbox" class="form-check-input" value="">Test Strips Used today
                 </label>
             </div>
-
         </div>
-       
     </div>
-            <div id="menu2" class="container tab-pane fade">
-                <br>
-                <h3>Compare Reports of two clinics</h3>
-            </div>   
+   
+
+    <div id="menu2" class="container tab-pane fade">
+        <br>
+        <h3>Compare Reports of two clinics</h3>
+    </div>
 </div>
