Added compare Inventory Image to visual studio

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -58,6 +58,7 @@
             </div>
         </div>
     </div>
+    <img src=""/>     
    
 
     <div id="menu2" class="container tab-pane fade">
