Added back and next button under compare inventory tab

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -58,8 +58,10 @@
             </div>
         </div>
     </div>
-    <img src=""/>     
-   
+    <div class="text-right">
+        <button type="button" class="bottom-right">Back</button>
+        <button type="button" class="bottom-right">Next</button>
+    </div>
 
     <div id="menu2" class="container tab-pane fade">
         <br>
