--- a/LifeSaverSite/Views/Home/DashBoard.cshtml
+++ b/LifeSaverSite/Views/Home/DashBoard.cshtml
@@ -5,12 +5,13 @@
 
 
 <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-sm-8">
-        <iframe width="800" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiOGRmYmJlZjctNjA2Yy00NjkyLTg4ZDktMzcyYjNlMGJkN2Q2IiwidCI6ImJjMTBlMDUyLWIwMWMtNDg0OS05OTY3LWVlN2VjNzRmYzlkOCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe></div>
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+        <iframe width="1000" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiNjA4YWU0ZjktMmU3NS00ZjQxLWI1YWUtZDEzNWZiMTYyYzIzIiwidCI6ImJjMTBlMDUyLWIwMWMtNDg0OS05OTY3LWVlN2VjNzRmYzlkOCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe></div>
 
-     <div class="col-md-2"></div>
-            </div> 
+     <div class="col-md-1"></div>
+ </div>
+  
 
 <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
 
