Added table under Compare Inventory tab in Compare page

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -58,6 +58,43 @@
             </div>
         </div>
     </div>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Comparison Attributes</th>
+                <th>Clinic A</th>
+                <th>Clinic B</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Test strip delivery date</td>
+                <td>05/05/2018</td>
+                <td>05/07/2019</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>No of test strips delivered this month</td>
+                <td>200</td>
+                <td>150</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>No of test strips delivered last month</td>
+                <td>150</td>
+                <td>150</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>No of test strips used today</td>
+                <td>57</td>
+                <td>28</td>
+            </tr>
+        </tbody>
+    </table>
     <div class="text-right">
         <button type="button" class="bottom-right">Back</button>
         <button type="button" class="bottom-right">Next</button>
