Fixed table-style and removed compare report tab

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -1,107 +1,101 @@
 ﻿
 @{
+    /**/
+
     ViewBag.Title = "Compare";
 }
 
 <h2>Compare</h2>
-<div class="container mt-3">
-    <br>
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#home">Overall Comparison</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#menu1">Inventory Comparison</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#menu2">Reports Comparison</a>
-        </li>
-    </ul>
-</div>
-<!-- Tab panes -->
-<div class="tab-content">
-    <div id="home" class="container tab-pane active">
+    <div class="container mt-3">
         <br>
-        <img src="~/Content/Img/compare.JPG" class="mx-auto d-block img-fluid img-thumbnail" />
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#home">Overall Comparison</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu1">Inventory Comparison</a>
+            </li>
+        </ul>
     </div>
-    <div id="menu1" class="container tab-pane fade">
-        <div class="row"><p> </p></div>
-        <div class="row">
-            <p style="margin-left:25px;">Compare</p>
-            <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:10px;">Clinic A</button>
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div id="home" class="container tab-pane active">
+            <br>
+            <img src="~/Content/Img/compare.JPG" class="mx-auto d-block img-fluid img-thumbnail" />
+        </div>
+        <div id="menu1" class="container tab-pane fade">
+            <div class="row"><p> </p></div>
+            <div class="row">
+                <p style="margin-left:25px;">Compare</p>
+                <div class="dropdown">
+                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" style="margin-left:10px;">Clinic A</button>
+                </div>
+                <p style="margin-left:50px;"> With   </p>
+                <div class="dropdown">
+                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
+                </div>
+                <div class=" btn">
+                    <button type="submit" style="margin-left:400px;">Compare</button>
+                </div>
             </div>
-            <p style="margin-left:50px;"> With   </p>
-            <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
+            <div class="row">
+                <div class="form-check-inline">
+                    <label class="form-check-label">
+                        <input type="checkbox" class="form-check-input" value="" style="margin-left:20px;">Remaining Test Strips this month
+                    </label>
+                </div>
+                <div class="form-check-inline">
+                    <label class="form-check-label">
+                        <input type="checkbox" class="form-check-input" value="">Remaining Test Strip from Last Month
+                    </label>
+                </div>
+                <div class="form-check-inline">
+                    <label class="form-check-label">
+                        <input type="checkbox" class="form-check-input" value="">Test Strips Used today
+                    </label>
+                </div>
             </div>
-            <div class=" btn">
-                <button type="submit" style="margin-left:400px;">Compare</button>
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr class="bg-dark">
+                        <th>Comparison Attributes</th>
+                        <th>Clinic A</th>
+                        <th>Clinic B</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Test strip delivery date</td>
+                        <td>05/05/2018</td>
+                        <td>05/07/2019</td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td>No of test strips delivered this month</td>
+                        <td>200</td>
+                        <td>150</td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td>No of test strips delivered last month</td>
+                        <td>150</td>
+                        <td>150</td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td>No of test strips used today</td>
+                        <td>57</td>
+                        <td>28</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="text-right">
+                <button type="button" class="bottom-right">Back</button>
+                <button type="button" class="bottom-right">Next</button>
             </div>
         </div>
-        <div class="row">
-            <div class="form-check-inline">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="" style="margin-left:20px;">Remaining Test Strips this month
-                </label>
-            </div>
-            <div class="form-check-inline">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Remaining Test Strip from Last Month
-                </label>
-            </div>
-            <div class="form-check-inline">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Test Strips Used today
-                </label>
-            </div>
-        </div>
-    </div>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Comparison Attributes</th>
-                <th>Clinic A</th>
-                <th>Clinic B</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Test strip delivery date</td>
-                <td>05/05/2018</td>
-                <td>05/07/2019</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>No of test strips delivered this month</td>
-                <td>200</td>
-                <td>150</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>No of test strips delivered last month</td>
-                <td>150</td>
-                <td>150</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>No of test strips used today</td>
-                <td>57</td>
-                <td>28</td>
-            </tr>
-        </tbody>
-    </table>
-    <div class="text-right">
-        <button type="button" class="bottom-right">Back</button>
-        <button type="button" class="bottom-right">Next</button>
-    </div>
-
-    <div id="menu2" class="container tab-pane fade">
-        <br>
-        <h3>Compare Reports of two clinics</h3>
-    </div>
 </div>
