--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -2,45 +2,38 @@
 @{
     ViewBag.Title = "Inventory";
 }
-
-<!--  <body style="background-image:url('~/Content/Img/Inventory_Background.jpg'); background-repeat:no-repeat; background-size:cover">   -->
-<div class="container">
-    <h3>Inventory</h3>
-    <div class="container mt-3">
-        <br>
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#home">Clinic A</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#menu1">Clinic B</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#menu2">Clinic C</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#menu2">Clinic D</a>
-            </li>
-            <li>
-                <div class="text-right">
-                    <button type="button" class="bottom-right" style="margin-left:925px;">Compare Inventory</button>
-                </div>
-            </li>
-        </ul>
-    </div>
-        
-    <table class="table table-striped">
-        <thead><tr><th>Inventory List of Clinic A</th></tr></thead>
+    
+<div class="text-body" style="margin-left:10px;"><h3>Inventory</h3></div>
+<div class="container mt-3">
+    <br>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active bg-dark" data-toggle="tab" href="#home">Abia</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#menu1">Delta</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#home">Lagos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#menu1">Benue</a>
+        </li>
+    </ul>
+</div>
+<div class="row" style="margin-top:10px; margin-left:20px; margin-bottom:15px;">Inventory details of selected clinic</div>
+    
+    <table class="table table-striped table-bordered">
         <thead>
-            <tr>
+            <tr class="bg-dark">
                 <th>Clinic Id</th>
                 <th>Name</th>
                 <th>Date of Order</th>
                 <th>Unit Price</th>
                 <th>Quantity In Stock</th>
                 <th>Reorder Time (In Days)</th>
-                <th> Reorder Quantity</th>
+                <th>Reorder Quantity</th>
             </tr>
         </thead>
         <tbody>
@@ -77,9 +70,8 @@
             </tr>
         </tbody>
     </table>
-    <div class="text-right">
+    <div class="text-right" style="margin-bottom:20px;">
         <button type="button" class="bottom-right">Back</button>
         <button type="button" class="bottom-right">Next</button>
         <button type="button" class="bottom-right">Last</button>
     </div>
-</div>
