Added Clinic Location list on Inventory webpage

--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -3,7 +3,29 @@
     ViewBag.Title = "Inventory";
 }
     
-<div class="text-body" style="margin-left:10px;"><h3>Inventory</h3></div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h3>Inventory</h3>
+        </div>
+        <div class="col" style="margin-left:350px;">
+            <div class="form-check-inline">
+                <label class="form-text">Clinic</label>
+                <select class="form-control" id="InvenL1" name="InventoryList1" style="margin-left:10px; margin-top:9px;">
+                    <option>Abia</option>
+                    <option>Admawa</option>
+                    <option>Akwa Ibom</option>
+                    <option>Beune</option>
+                    <option>Borno</option>
+                    <option>Cross River</option>
+                    <option>Delta</option>
+                    <option>Edo</option>
+                    <option>Lagos</option>
+                </select>
+            </div>
+         </div>
+    </div>
+</div>
 <div class="container mt-3">
     <br>
     <!-- Nav tabs -->
