--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -8,7 +8,7 @@
         <div class="col">
             <h3>Inventory</h3>
         </div>
-        <div class="col" style="margin-left:350px;">
+        <div class="col" style="margin-left:400px;">
             <div class="form-check-inline">
                 <label class="form-text">Clinic</label>
                 <select class="form-control" id="InvenL1" name="InventoryList1" style="margin-left:10px; margin-top:9px;">
@@ -24,6 +24,11 @@
                 </select>
             </div>
          </div>
+        <div class="col text-right">
+            <div class="btn">
+                <button type="submit" style="margin-top:9px;">Go</button>
+            </div>
+        </div>
     </div>
 </div>
 <div class="container mt-3">
