--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -1,56 +1,81 @@
 ﻿
 @{
-    ViewBag.Title = "Inventory";
+                /**/
+
+                ViewBag.Title = "Inventory";
 }
-    
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <h3>Inventory</h3>
-        </div>
-        <div class="col" style="margin-left:400px;">
-            <div class="form-check-inline">
-                <label class="form-text">Clinic</label>
-                <select class="form-control" id="InvenL1" name="InventoryList1" style="margin-left:10px; margin-top:9px;">
-                    <option>Abia</option>
-                    <option>Admawa</option>
-                    <option>Akwa Ibom</option>
-                    <option>Beune</option>
-                    <option>Borno</option>
-                    <option>Cross River</option>
-                    <option>Delta</option>
-                    <option>Edo</option>
-                    <option>Lagos</option>
-                </select>
+
+<html>
+<head>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h3>Inventory</h3>
             </div>
-         </div>
-        <div class="col text-right">
-            <div class="btn">
-                <button type="submit" style="margin-top:9px;">Go</button>
+            <div class="col" style="margin-left:400px;">
+                <div class="form-check-inline">
+                    <label class="form-text">Clinic</label>
+                    <select class="form-control" id="InvenL1" name="InventoryList1" style="margin-left:10px; margin-top:9px;">
+                        <option>Abia</option>
+                        <option>Admawa</option>
+                        <option>Akwa Ibom</option>
+                        <option>Beune</option>
+                        <option>Borno</option>
+                        <option>Cross River</option>
+                        <option>Delta</option>
+                        <option>Edo</option>
+                        <option>Lagos</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col">
+                <input id="datepicker1" width="160" style="background-color:antiquewhite"/>
+                <script>
+                    $('#datepicker1').datepicker({
+                        uiLibrary: 'bootstrap4'
+                    });
+                </script>
+            </div>
+            <div class="col">
+                <input id="datepicker2" width="160" style="background-color:antiquewhite"/>
+                <script>
+                    $('#datepicker2').datepicker({
+                        uiLibrary: 'bootstrap4'
+                    });
+                </script>
+            </div>
+            <div class="col text-right">
+                <div class="btn">
+                    <button type="submit" style="margin-top:9px;">Go</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container mt-3">
-    <br>
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active bg-dark" data-toggle="tab" href="#home">Abia</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#menu1">Delta</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#home">Lagos</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#menu1">Benue</a>
-        </li>
-    </ul>
-</div>
-<div class="row" style="margin-top:10px; margin-left:20px; margin-bottom:15px;">Inventory details of selected clinic</div>
-    
+    <div class="container mt-3">
+        <br>
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active bg-dark" data-toggle="tab" href="#home">Abia</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu1">Delta</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#home">Lagos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu1">Benue</a>
+            </li>
+        </ul>
+    </div>
+    <div class="row" style="margin-top:10px; margin-left:20px; margin-bottom:15px;">Inventory details of selected clinic</div>
+
     <table class="table table-striped table-bordered">
         <thead>
             <tr class="bg-dark">
@@ -102,3 +127,6 @@
         <button type="button" class="bottom-right">Next</button>
         <button type="button" class="bottom-right">Last</button>
     </div>
+
+</body>
+</html>
